<resources>
    <string name="app_name">KiteApp</string>
    <string name="plus_symbol">+</string>


    <string name="calories">Калории</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="calories_small">ккал</string>
    <string name="authorization">Авторизация</string>
    <string name="weight">Вес (кг)</string>
    <string name="height">Рост (см)</string>
    <string name="age">Возраст</string>
    <string name="sex">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="begin">Начать</string>
    <string name="adding_food">Добавление</string>
    <string name="name">Название</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Еда</string>
    <string name="drink">Напитки</string>
    <string name="settings">Настройки</string>
    <string name="registration">Создание пользователя</string>
    <string name="reg_description">Укажите свои данные</string>
    <string name="username">Имя</string>
    <string name="phys">Физическая активность</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="product">Название продукта</string>
    <string name="time">Время</string>
    <string name="grams">Граммы</string>
    <string name="plus">+</string>
    <string name="date">Дата</string>


    <string name="tv_take_photo">Take photo</string>
    <string name="tv_description">Select a preset image or take a new photo</string>
    <string name="tv_placeholder">Object detection demo</string>
</resources>