<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/textFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/product" />

        <TextView
            android:id="@+id/textFoodTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:text="@string/time" />

    </LinearLayout>

    <TextView
        android:id="@+id/textFoodCalories"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/calories"
        />

    <TextView
        android:id="@+id/textFoodGrams"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/grams" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_settings_black_24dp"
        />


</LinearLayout>