<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textProductName"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="@string/product" />

            <TextView
                android:id="@+id/textProductCalories"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/calories" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textProductProteins"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:textColor="@color/ltgrey"
                android:text="@string/proteins" />

            <TextView
                android:id="@+id/textProductFats"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:textColor="@color/ltgrey"
                android:text="@string/fats" />

            <TextView
                android:id="@+id/textProductCarbohydrates"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:textColor="@color/ltgrey"
                android:text="@string/carbohydrates" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_add_black_24dp"
        />

</LinearLayout>