<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/authorization" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="Вес"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="Рост"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="Возраст"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/sex" />
            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButtonSex1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonSex2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewSport"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="Физическая активность" />
            <RadioGroup
                android:id="@+id/radioGroupSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButtonSport1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Нет физической нагрузки" />
                <RadioButton
                    android:id="@+id/radioButtonSport2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3 раза в неделю" />
                <RadioButton
                    android:id="@+id/radioButtonSport3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5 раза в неделю" />
                <RadioButton
                    android:id="@+id/radioButtonSport4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Каждый день" />
                <RadioButton
                    android:id="@+id/radioButtonSport5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Каждый день + физическая работа" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonAuth"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>