<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/buttonMoveDayLeft"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="40dp"
                app:icon="@drawable/ic_arrow_back_ios_black_24dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/textChosenDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="@string/date" />

            <Button
                android:id="@+id/buttonMoveDayRight"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                app:icon="@drawable/ic_arrow_forward_ios_black_24dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginStart="10dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textViewC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
        />

        <ProgressBar
            android:id="@+id/progressBarC"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
        />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/proteins"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp" />

                <ProgressBar
                    android:id="@+id/progressBarP"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fats"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <ProgressBar
                    android:id="@+id/progressBarF"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewCh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Углев."
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <ProgressBar
                    android:id="@+id/progressBarCh"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            >
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:contentDescription="@string/adding_food"
            app:srcCompat="@drawable/ic_add_black_24dp"
            tools:ignore="RtlHardcoded,VectorDrawableCompat"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:contentDescription="@string/adding_food"
            app:srcCompat="@drawable/baseline_camera_alt_24"
            tools:ignore="RtlHardcoded,VectorDrawableCompat"
            />
    </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".MainActivity">-->

    <!--    <Button-->
    <!--        android:id="@+id/addBtn"-->
    <!--        android:layout_width="60dp"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:layout_marginBottom="50dp"-->
    <!--        android:background="@drawable/rounded_corners"-->
    <!--        android:text="@string/plus_symbol"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="35dp"-->
    <!--        android:text="11 декабря"-->
    <!--        android:textSize="36sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressBar"-->
    <!--        style="?android:attr/progressBarStyleHorizontal"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="20dp"-->
    <!--        android:layout_marginStart="40dp"-->
    <!--        android:layout_marginLeft="40dp"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:layout_marginEnd="40dp"-->
    <!--        android:layout_marginRight="40dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/calories"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/progressBar"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/progressBar" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView5"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/proteins"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/progressBar2"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/progressBar2" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView6"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/fats"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/progressBar4"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/progressBar4" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView7"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/carbohydrates"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/progressBar3"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/progressBar3" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView4"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="1800 ккал / 2500 ккал"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/progressBar"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/progressBar" />-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressBar2"-->
    <!--        style="?android:attr/progressBarStyleHorizontal"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="20dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/progressBar4"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/progressBar"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/progressBar" />-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressBar3"-->
    <!--        style="?android:attr/progressBarStyleHorizontal"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="20dp"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginLeft="10dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/progressBar"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/progressBar4"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/progressBar" />-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressBar4"-->
    <!--        style="?android:attr/progressBarStyleHorizontal"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="20dp"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginLeft="10dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/progressBar3"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/progressBar2"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/progressBar" />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->

